[package]
name = "rust-dataframe"
version = "0.0.1"
authors = ["Neville Dipale <nevilledips@gmail.com>"]
edition = "2018"

[dependencies]
arrow = { git = "https://github.com/apache/arrow"}
# arrow = { path = "../../arrow/rust/arrow"}
num = "0.2"
num-traits = "0.2"
csv = "1"
byteorder = "1"
flatbuffers = "0.5"
array_tool = "1"
postgres = {version = "0.16.0-rc.1", features = ["default", "with-chrono-0_4", "with-uuid-0_7"]}
chrono = "0.4"
# for lazy evaluation
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
# for parallel execution
rayon = "1.0"